2007-05-24 20:30 nick

	* panel/panel-item-manager.c: Rewrite some code, internal plugins
	  now need the X-XFCE-Module-Path entry in the desktop file. A
	  warning is shown if they don't have it. This to avoid wrong module
	  loading (and yes this might break internal plugins, but the plugin's 
	  desktop file needs to be fixed instead!). Also fixes bug #3279.

2007-05-24 14:00 nick

	* panel/panel-item-manager.c: Improve the module warnings a bit.

2007-05-23 9:44 nick

	* libxfce4panel/libxfce4panel-1.0.pc.in: Restore directories in the pc file.


2007-05-22 20:34 nick

	* plugins/launcher/launcher-dialog.c: Always update the panel icon when dropping
	a desktop file in the frame.

2007-05-22 12:33 nick

	* configure.in.in, plugins/launcher/launcher-exec.c: Avoid zombie processes.

2007-03-27 16:31 nick

	* Backport trunk

2007-03-18 15:46 nick

	* libxfce4panel/xfce-hvbox.c: Mmm thought orientation was a property... Fix that.

2007-03-18 15:23 nick

	* libxfce4panel: Add visibility support to reduce the library size a bit.
        * libxfce4panel/xfce-panel-macros.h: Add macros to disable debugging for
          release builds.
	* Various code cleanups and improvements.

2007-03-18 11:40 nick

	* plugins/launcher/launcher.c: Fix insensitive button after adding items to the panel.

2007-03-17 0:00  nick

	* Improve the icons with some tango ones or the standard icon names. Also remove
	  the icons that are not needed anymore.

2007-03-14 9:15  nick

	* plugins/tasklist/tasklist.c: Fix previous commit

2007-03-14 9:15  nick

	*libxfce4panel/Makefile.am: Try to fix bug 3002.

2007-03-14 8:38   nick

	* plugins/tasklist/tasklist.c: Fix bug 3011: expand setting not saved.

2007-03-10 16:07  nick

	* plugins/launcher/launcher-dialog.c: Don't append the %f. Too much side effects as
	  suggested by Jannis.

2007-03-10 8:27   nick

	* plugins/launcher/launcher-exec.c: ifdef the startup data structure.
	  Bug 2997, patch from Peter de Ridder.

2007-03-07 19:35  nick
